src_old/objects/EntityChangeLogSetting__c.object
<CustomObject>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>ProjectService</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>JobAttemptWorker</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldKey__c</fullName>
        <label>FieldKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entity Change Log Setting</label>
    <nameField>
        <label>EntityChangeLogSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Change Log Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>